{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]
 - Fix fallback MD5 calculation method on OS X
 - Fix dmidecode section getter
 - Fix cpuinfo parsing
 - Fix registering custom template functions
 - Fix handling of configuration file settings
 - Skip MD5 binary test if there's no binary available
 - Warn if cpuinfo is unreadable
 - Fix file hook options
 - Fix file on_change hook when source option is used

 [DOCUMENTATION]
 - Clarify contributing guide
 - Clarify INI file documentation
 - Document custom server parameters in INI files
 - Clarify installation of OS-specific dependencies
 - Clarify installation steps

 [ENHANCEMENTS]

 [MAJOR]

 [MINOR]

 [NEW FEATURES]

 [REVISION]
 - Set Travis CI root build job options explicitly
 - Test internal MD5 checksumming methods
 - Report coverage to Coveralls
 - Add initial test for proc inventory
 - Test custom template functions
 - Add initial config file tests
 - Test custom server functions
 - Add test for OS-specific dependencies
 - List optional features and their dependencies
 - List suggested development dependencies
 - Test cpuinfo inventory
 - Add initial file hook tests
 - Add file on_change tests for source option

1.12.1 2020-08-05 Ferenc Erki <erkiferenc@gmail.com>
 [DOCUMENTATION]
 - Document feature flags
 - Clarify description of the rex script

 [REVISION]
 - Gather only files tracked by git

1.12.0 2020-07-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Discontinue support for Windows 7, Windows Server 2008 R2, and older
 - Avoid caching of Bash completion options to support multiple Rexfiles
 - Fix calling get_file_path from Rexfile
 - Fix quoting of rsync parameters
 - Fix local download rsync operations
 - Fix determining local connections for rsync operations

 [ENHANCEMENTS]
 - Extend Bash completion with known hosts
 - Support wildcards in get_file_path
 - Split out temp file naming logic

 [NEW FEATURES]
 - Enable Bash completion of available CLI options
 - Add tab completion for Zsh